--- a/Day8/index.html
+++ b/Day8/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
 </head>
 <body>
-
-
-    
-   <script src="index.js"></script>
+    <h1>Top 10 Github users</h1>
+    <button onclick="fetchdata()">Get data</button>
+    <div id="div1">
+       
+    </div>
+   
 </body>
 </html>
